# llm-history

./: .gitignore  CLAUDE.md  PLAN.md  PLAN_RNN_INTERACTIVITY.md  check_corpus.py  check_model_access.py  corpus.py  download_models.py  environment.yml  generate_dogs.py  list_model_files.py  main.py  pretrain_embeddings.py  pretrain_models.py  pyproject.toml  requirements.txt  utils.py
research/: PLAN.md  check_model_id.py  corpus.py  do_download.py  environment.yml  main.py  pretrain_models.py  pytest.ini  write_rnn_html.py
research/data/: corpus.txt
research/routers/: ngram.py  rnn.py
research/static/: nav.js  style.css  utils.js
research/templates/: index.html  module-1-ngram.html  module-2-rnn-lstm.html  module-3-embeddings.html  module-5-compare.html
research/tests/: conftest.py  test_api.py  test_corpus.py  test_ui.py
routers/: embeddings.py  llm_era.py  ngram.py
static/: nav.js  style.css  tooltip.js  utils.js
templates/: index.html  module-1-ngram.html  module-1b-training.html  module-1c-neuron.html  module-2-embeddings.html  module-2-rnn-lstm.html  module-3-embeddings.html  module-3-rnn-lstm.html  module-4-llm-era.html  module-4b-hallucinations.html
tests/: conftest.py  test_api.py  test_smoke.py  test_ui.py
