[project]
name = "llm-history"
version = "0.1.0"
description = "Interactive web app explaining the evolution of language models"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "gensim==4.3.3",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "jinja2==3.1.4",
    "transformers==4.44.2",
    "accelerate==0.34.2",
    "python-multipart==0.0.9",
    "autoawq",
    "torch>=2.12.0.dev0",
    "triton>=3.6.0.dev0",
    "umap-learn>=0.5.7",
]

[project.optional-dependencies]
test = [
    "playwright==1.47.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
triton = { index = "pytorch-nightly" }
